--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <img src="images/blackcat.jpg" width=50%/>
 <h2>This is a picture of a cute black cat.</h2>
 <p>Black kitties have yellow eyes because they lack pigment.</p>
+
+<h3>This is a header in the main branch that will cause a conflict with another branch.</h3>
