--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <h2>This is a picture of a cute black cat.</h2>
 <p>Black kitties have yellow eyes because they lack pigment.</p>
 
-Oh hey check it out, I'm updating index.html in a branch.
+I don't really believe it was up to date.
