--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@
 <p>Black kitties have yellow eyes because they lack pigment.</p>
 
 <h3>A brand new line of text in both branches, hopefully</h3>
+
+I'm working inside GitHub and making changes on the remote end of things, because why not.
