--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 
 <h3>A brand new line of text in both branches, hopefully</h3>
 
-LOOK AT ME IM ADDING A BUNCH OF SHIT LOCALLY IN GIT
+Hey man this needs to not mention local at all.
