--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<body style="background-color:#002B5C;">
 <img src="images/blackcat.jpg" width=50% />
 <h2>This is a picture of a cute black cat.</h2>
 <p>Black kitties have yellow eyes because they lack pigment.</p>
@@ -5,3 +6,4 @@
 <h3>A brand new line of text in both branches, hopefully</h3>
 
 Hey man this needs to not mention local at all.
+</body>
