--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <img src="images/blackcat.jpg" width=50% />
 <h2>This is a picture of a cute black cat.</h2>
 <p>Black kitties have yellow eyes because they lack pigment.</p>
+<img src="images/kitten.jpg" width=100% />
 
 <h3>A brand new line of text in both branches, hopefully</h3>
 
-Hey man this needs to not mention local at all.
 </body>
