--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <body style="background-color:#002B5C;">
-<img src="images/blackcat.jpg" width=50% />
+<img src="images/blackcat.jpg" width=50% alt="black cat" />
 <h2>This is a picture of a cute black cat.</h2>
 <p>Black kitties have yellow eyes because they lack pigment.</p>
-<img src="images/kitten.jpg" width=100% />
+<img src="images/kitten.jpg" width=100% alt="black kitten"/>
 
 <h3>A brand new line of text in both branches, hopefully</h3>
 
