added alert to fix #1

--- a/index.html
+++ b/index.html
@@ -4,4 +4,6 @@
 <p>Black kitties have yellow eyes because they lack pigment.</p>
 <img src="images/kitten.jpg" width=100% alt="black kitten"/>
 
+alert("ADOPT A BLACK CAT TODAY!")
+
 </body>
