--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <img src="images/blackcat.jpg" width=50% alt="black cat" />
 <h2>This is a picture of a cute black cat.</h2>
 <p>Black kitties have yellow eyes because they lack pigment.</p>
-<img src="images/kitten.jpg" width=100% alt="black kitten"/>
+<img src="images/kitten.jpg" width=100% alt="black kitten" />
 
-alert("ADOPT A BLACK CAT TODAY!")
+alert("ADOPT A BLACK CAT TODAY!");
 
 </body>
