fixed alert again

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <p>Black kitties have yellow eyes because they lack pigment.</p>
 <img src="images/kitten.jpg" width=100% alt="black kitten" />
 
+<script>
 alert("ADOPT A BLACK CAT TODAY!");
+</script>
 
 </body>
